--- a/src/frontend/src/components/Input/Input.module.css
+++ b/src/frontend/src/components/Input/Input.module.css
@@ -2,8 +2,7 @@
   max-width: 100%;
   display: flex !important;
   flex-flow: row nowrap;
-  align-items: center;
-  height: 1.5em;
+  align-items: stretch;
 
   border: 1px solid #666;
   border-radius: .25em;
@@ -11,14 +10,15 @@
 
 .inputContainer {
   box-sizing: border-box;
-  flex: 1 0 auto;
+  flex: 1 1 auto;
   height: 100%;
   padding: .1em;
 }
 
 .prefixContainer, .postfixContainer {
   flex: 0 1 auto;
-  height: 100%;
+  display: flex;
+  flex-flow: row nowrap;
 }
 
 .prefixContainer > *,
@@ -34,7 +34,7 @@
   border-radius: 0;
 }
 
-.postfixContainer > * > *:last-child {
+.postfixContainer > *:last-child {
   border-radius: 0 .25em .25em 0;
 }
 
@@ -46,16 +46,18 @@
   border-left: 1px solid #666;
 }
 
-.inputContainer input {
+.inputContainer input, .inputContainer textarea {
   width: 100%;
-  height: 100%;
   border: 0;
   padding: 0;
   margin: 0;
   background-color: transparent;
+  resize: vertical;
+  height: fit-content;
 }
 
-.inputContainer input:focus-visible {
+.inputContainer input:focus-visible,
+.inputContainer textarea:focus-visible {
   outline: none;
 }
 
