--- a/src/frontend/src/components/Input/Input.module.css
+++ b/src/frontend/src/components/Input/Input.module.css
@@ -4,8 +4,11 @@
   flex-flow: row nowrap;
   align-items: stretch;
 
-  border: 1px solid #666;
+  border: 1px solid var(--primary-border-color);
   border-radius: .25em;
+  margin-top: .25em;
+
+  background-color: var(--primary-background-color);
 }
 
 .inputContainer {
@@ -39,28 +42,50 @@
 }
 
 .prefixContainer ~ .inputContainer {
-  border-left: 1px solid #666;
+  border-left: 1px solid var(--primary-border-color);
 }
 
 .inputContainer ~ .postfixContainer {
-  border-left: 1px solid #666;
+  border-left: 1px solid var(--primary-border-color);
 }
 
-.inputContainer input, .inputContainer textarea {
+.inputContainer * {
   width: 100%;
   border: 0;
   padding: 0;
   margin: 0;
-  background-color: transparent;
+  background-color: var(--primary-background-color);
   resize: vertical;
   height: fit-content;
+  color: var(--primary-text-color)
 }
 
-.inputContainer input:focus-visible,
-.inputContainer textarea:focus-visible {
+.inputContainer > *:focus-visible {
   outline: none;
 }
 
+.inputContainer *:disabled {
+  color: var(--disabled-text-color);
+  background-color: var(--disabled-action-color);
+}
+
 .disabled {
-  background-color: #eee;
+  background-color: var(--disabled-action-color);
+  color: var(--disabled-text-color);
+}
+
+.helper {
+  margin-top:.5em;
+  margin-bottom: 1em;
+  font-size: .75em;
+  font-style: italic;
+  font-weight: lighter;
+  max-width: 100%;
+  color: var(--secondary-text-color);
+}
+
+.helper pre {
+  display: inline;
+  margin-right: .5em;
+  margin-bottom: .25em;
 }
