--- a/src/frontend/src/App.module.css
+++ b/src/frontend/src/App.module.css
@@ -4,6 +4,7 @@
   --disabled-text-color: #999;
 
   --primary-background-color: #999;
+  --secondary-background-color: #aaa;
 
   --primary-action-color: #03b403;
   --secondary-action-color: #1e90ff;
@@ -21,6 +22,9 @@
     --secondary-text-color: #ddd;
     --disabled-text-color: #bbb;
 
+    --primary-background-color: #999;
+    --secondary-background-color: #666;
+
     --primary-action-color: #01b401;
     --secondary-action-color: #0940ff;
     --danger-action-color: #dd3333;
@@ -29,6 +33,34 @@
     --disabled-action-background-color: #ddd;
   }
 }
+
+body {
+  font-weight: 400;
+  line-height: 1.75;
+}
+
+p {margin-bottom: 1rem;}
+
+h1, h2, h3, h4, h5 {
+  margin: 3rem 0 1.38rem;
+  font-weight: 400;
+  line-height: 1.3;
+}
+
+h1 {
+  margin-top: 0;
+  font-size: 3.052rem;
+}
+
+h2 {font-size: 2.441rem;}
+
+h3 {font-size: 1.953rem;}
+
+h4 {font-size: 1.563rem;}
+
+h5 {font-size: 1.25rem;}
+
+small, .text_small {font-size: 0.8rem;}
 
 .App {
   font-family: Arial, Helvetica, sans-serif;
