--- a/src/frontend/src/App.module.css
+++ b/src/frontend/src/App.module.css
@@ -1,3 +1,5 @@
+@import url('./assets/latolatinfonts.css');
+
 :root {
   --primary-text-color: #333;
   --secondary-text-color: #666;
@@ -35,6 +37,7 @@
 }
 
 body {
+  font-family: "LatoLatinWeb", Arial, Helvetica, sans-serif;
   font-weight: 400;
   line-height: 1.75;
 }
@@ -63,7 +66,6 @@ h5 {font-size: 1.25rem;}
 small, .text_small {font-size: 0.8rem;}
 
 .App {
-  font-family: Arial, Helvetica, sans-serif;
   font-size: 24px;
   color: var(--primary-text-color);
   min-height: calc(100vh);
