--- a/src/frontend/src/views/Commands/CommandsView.module.css
+++ b/src/frontend/src/views/Commands/CommandsView.module.css
@@ -23,7 +23,12 @@
   width: 100%;
   box-sizing:border-box;
   padding-right: 1em;
-  margin-bottom: 2em;
+  padding-bottom: 1em;
+  margin-bottom: 1em;
+}
+
+.commandList > li:not(:last-of-type) {
+  border-bottom: 1px solid var(--primary-border-color);
 }
 
 .commandList:last-of-type {
