Functional new user registration

--- a/src/frontend/src/views/NotificationsView/NotificationsView.module.css
+++ b/src/frontend/src/views/NotificationsView/NotificationsView.module.css
@@ -56,3 +56,16 @@
   font-style: normal;
   font-family: 'hack', 'Courier New', Courier, monospace;
 }
+
+.testButton {
+  display: block;
+  height: 2em;
+  max-width: 50%;
+  margin: 0 auto;
+}
+
+@media (max-width: 800px) {
+  .testButton {
+    margin-bottom: 1.5em;
+  }
+}
