--- a/src/frontend/src/views/NotificationsView/NotificationsView.module.css
+++ b/src/frontend/src/views/NotificationsView/NotificationsView.module.css
@@ -4,7 +4,7 @@
   max-width: 100%;
 }
 
-.helper pre {
+.helper .token, .helper .code {
   display: inline;
   margin-right: .5em;
   margin-bottom: .25em;
@@ -14,6 +14,7 @@
   display: flex;
   flex-flow: row wrap;
   padding: .5em;
+  list-style: none;
 }
 
 .notificationList {
