--- a/src/frontend/src/App.module.css
+++ b/src/frontend/src/App.module.css
@@ -85,5 +85,5 @@ small, .text_small {font-size: 0.8rem;}
 .wrapper {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 0 1em;
+  padding: 1em;
 }
