--- a/src/frontend/src/components/Button/Button.module.css
+++ b/src/frontend/src/components/Button/Button.module.css
@@ -32,3 +32,9 @@
   border-color: #cc3333;
   background-color: var(--danger-action-color);
 }
+
+.attention {
+  color: white;
+  background-color: var(--inverted-attention-color);
+  border-color: var(--attention-color);
+}
