--- a/src/frontend/src/components/Navigation/Navigation.module.css
+++ b/src/frontend/src/components/Navigation/Navigation.module.css
@@ -1,5 +1,6 @@
 .nav {
   background-color: #333;
+  color: white;
 }
 
 .nav ul{
@@ -14,5 +15,9 @@
 }
 
 .navItem a {
+  color: white;
+}
+
+.navItem a:visited {
   color: white;
 }
