Add high water mark for dashboard chat

--- a/src/frontend/src/views/Dashboard/DashboardChat/DashboardChat.module.css
+++ b/src/frontend/src/views/Dashboard/DashboardChat/DashboardChat.module.css
@@ -2,3 +2,16 @@
   max-height: 20em;
   overflow-y: auto;
 }
+
+.highWater {
+  border-top: orange 1px solid;
+  position: relative;
+  margin-top: 1em;
+}
+
+.highWater::before {
+  content: "New";
+  position: absolute;
+  color: orange;
+  top: -1.25em;
+}
