--- a/src/frontend/src/components/EditableProperty/EditableProperty.module.css
+++ b/src/frontend/src/components/EditableProperty/EditableProperty.module.css
@@ -1,3 +1,11 @@
-.input {
-  display: block;
+.select option:checked {
+  background-color: var(--secondary-action-color);
+}
+
+.select:disabled :checked {
+  background-color: var(--disabled-action-background-color);
+}
+
+.select:disabled option {
+  background-color: transparent;
 }
