--- a/src/frontend/src/App.module.css
+++ b/src/frontend/src/App.module.css
@@ -1,4 +1,4 @@
-@import url('./assets/latolatinfonts.css');
+@import url("./assets/latolatinfonts.css");
 
 :root {
   --primary-text-color: #333;
@@ -20,17 +20,17 @@
   --disabled-action-background-color: #ddd;
 
   --primary-border-color: #666;
-  
+
   font-size: 24px;
 }
 
-@media (prefers-color-scheme:dark) {
+@media (prefers-color-scheme: dark) {
   :root {
     --primary-text-color: white;
     --secondary-text-color: #ddd;
     --disabled-text-color: #bbb;
     --inverted-text-color: #333;
-    
+
     --inverted-attention-color: #910ea8;
     --attention-color: #d410f6;
 
@@ -53,9 +53,15 @@ body {
   font-variant: no-common-ligatures;
 }
 
-p {margin-bottom: 1rem;}
+p {
+  margin-bottom: 1rem;
+}
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
   margin: 3rem 0 1.38rem;
   font-weight: 400;
   line-height: 1.3;
@@ -66,18 +72,44 @@ h1 {
   font-size: 3.052rem;
 }
 
-h2 {font-size: 2.441rem;}
+h2 {
+  font-size: 2.441rem;
+}
 
-h3 {font-size: 1.953rem;}
+h3 {
+  font-size: 1.953rem;
+}
 
-h4 {font-size: 1.563rem;}
+h4 {
+  font-size: 1.563rem;
+}
 
-h5 {font-size: 1.25rem;}
+h5 {
+  font-size: 1.25rem;
+}
 
-a { color: var(--primary-text-color) }
-a:visited { color: var(--primary-text-color) }
+a {
+  color: var(--primary-text-color);
+}
+a:visited {
+  color: var(--primary-text-color);
+}
 
-small, .text_small {font-size: 0.8rem;}
+small,
+.text_small {
+  font-size: 0.8rem;
+}
+
+pre, kbd {
+  display: inline-block;
+  border: 1px solid purple;
+  background-color: #880088;
+  border-radius: 0.25em;
+  padding: 0.1em 0.25em;
+  color: white;
+  font-style: normal;
+  font-family: "hack", "Courier New", Courier, monospace;
+}
 
 .App {
   color: var(--primary-text-color);
